--- a/src/app/portal/admin/admin.component.html
+++ b/src/app/portal/admin/admin.component.html
@@ -1,3 +1,13 @@
-<mat-tab-group>
-  <mat-tab label="USERS"><app-employees></app-employees></mat-tab>
-</mat-tab-group>
+<div fxLayoutAlign="center center" fxFlex>
+  <mat-card>
+  <mat-card-header>
+    <!--<h1>{{user.role}}</h1>-->
+  </mat-card-header>
+  <mat-card-content>
+    <mat-tab-group>
+      <mat-tab label="USERS"><usertable></usertable></mat-tab>
+      <mat-tab label="VENUES"><app-venue-data></app-venue-data> </mat-tab>
+    </mat-tab-group>
+  </mat-card-content>
+</mat-card>
+</div>
