--- a/src/app/portal/admin/employees/employees.component.html
+++ b/src/app/portal/admin/employees/employees.component.html
@@ -1,36 +1,73 @@
-<div>
-  <mat-table [dataSource]="dataSource" matSort matSortActive="created" matSortDisableClear matSortDirection="asc">
-    <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> First Name </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.name}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="last">
-      <mat-header-cell *matHeaderCellDef> Last Name </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.last}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="username">
-      <mat-header-cell *matHeaderCellDef> Username </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.username}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="email">
-      <mat-header-cell *matHeaderCellDef> Email </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.email}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="password">
-      <mat-header-cell *matHeaderCellDef> Password </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.password}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="role">
-      <mat-header-cell *matHeaderCellDef> Role </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.role}} </mat-cell>
-    </ng-container>
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
+<div class="example-header" fxLayout="row">
+  <mat-form-field>
+    <mat-icon matPrefix>search</mat-icon>
+    <input matInput (keyup)="applyFilter($event.target.value)" label="Filter">
+  </mat-form-field>
+  <div>
+    <button mat-mini-fab (click)="openDialog()"><mat-icon>add</mat-icon></button>
+  </div>
+</div>
 
-  <!--Paginator-->
-  <mat-paginator [length]="resultsLength" [pageSize]="30">
-  </mat-paginator>
+<div class="table-container">
+  <mat-table [dataSource]="dataSource" matSort>
+
+    <!--<ng-container matColumnDef="id">-->
+      <!--<mat-header-cell *matHeaderCellDef mat-sort-header> ID </mat-header-cell>-->
+      <!--<mat-cell *matCellDef="let user">{{user._id}}</mat-cell>-->
+    <!--</ng-container>-->
+
+    <!--[Name Column]-->
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+      <mat-cell *matCellDef="let user">{{user.name}}</mat-cell>
+    </ng-container>
+
+    <!--[Last Name Column]-->
+    <ng-container matColumnDef="last">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Last </mat-header-cell>
+      <mat-cell *matCellDef="let user">{{user.last}}</mat-cell>
+    </ng-container>
+
+    <!--[Username Column]-->
+    <ng-container matColumnDef="username">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Username </mat-header-cell>
+      <mat-cell *matCellDef="let user">{{user.username}}</mat-cell>
+    </ng-container>
+
+    <!--[Email Column]-->
+    <ng-container matColumnDef="email">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Email </mat-header-cell>
+      <mat-cell *matCellDef="let user">{{user.email}}</mat-cell>
+    </ng-container>
+
+    <!--[Password Column]-->
+    <!--<ng-container matColumnDef="password">-->
+      <!--<mat-header-cell *matHeaderCellDef> Password </mat-header-cell>-->
+      <!--<mat-cell *matCellDef="let user">{{user.password}}</mat-cell>-->
+    <!--</ng-container>-->
+
+    <!--[Role Column]-->
+    <ng-container matColumnDef="role">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Role </mat-header-cell>
+      <mat-cell *matCellDef="let user">{{user.role}}</mat-cell>
+    </ng-container>
+
+    <!--[Actions]-->
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+      <mat-cell *matCellDef="let user">
+        <div fxLayout="row">
+          <button mat-button (click)="updateUser(user._id)"><mat-icon>mode_edit</mat-icon></button>
+          <button mat-raised-button color="warn"(click)="DeleteUser(user._id)"><mat-icon>delete</mat-icon></button>
+        </div>
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns" (click)="onRowClicked(row)"></mat-row>
+
+  </mat-table>
+  <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
 </div>
 
 
