--- a/src/app/portal/admin/employees/employees.component.scss
+++ b/src/app/portal/admin/employees/employees.component.scss
@@ -1,8 +1,27 @@
-
-.title{
-  font-family: Righteous, sans-serif;
-  font-size: 21px;
-  font-weight: bold;
-  color: #0BA5DB;
+.example-container {
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
 }
 
+.example-header {
+  min-height: 64px;
+  padding: 8px 24px 0;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
+.mat-table {
+  overflow: auto;
+  max-height: 500px;
+}
+.mat-card{
+  width: 90%;
+}
+.mat-mini-fab{
+  background-color: #0BA5DB;
+  color: white;
+}
