--- a/src/styles.scss
+++ b/src/styles.scss
@@ -201,4 +201,15 @@ main {
   }
 }
 
+.forgot{
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-weight: 300;
+  .forgot-username{
+    color: #777777;
+  }
+  .forgot-password{
+    color: black;
+  }
+}
+
 
