--- a/src/app/portal/user/user.component.html
+++ b/src/app/portal/user/user.component.html
@@ -1,7 +1,7 @@
 <div class="portal" fxLayout="row">
   <div class="side-menu" fxFlex="30" fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="20">
     <div class="header">
-      <h1>Manager</h1>
+      <h1>User</h1>
     </div>
     <div class ="list">
       <mat-list>
