--- a/src/app/portal/portal.component.scss
+++ b/src/app/portal/portal.component.scss
@@ -3,3 +3,22 @@
   padding: 16px;
   height: 100vh;
 }
+
+h3 {
+  margin: 0 0 10px;
+}
+
+pre {
+  background-color: #f5f5f5;
+  padding: 15px;
+}
+
+.mat-tab-label-content{
+  font-size: 18px;
+  background-color: #0BA5DB;
+}
+
+.mat-card{
+  width: 95%;
+  height: auto;
+}
