--- a/src/app/portal/users/users.component.html
+++ b/src/app/portal/users/users.component.html
@@ -57,7 +57,7 @@
       <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
       <mat-cell *matCellDef="let user">
         <div fxLayout="row">
-          <button mat-button (click)="updateUser(user._id)"><mat-icon>mode_edit</mat-icon></button>
+          <button mat-button (click)="updateUser(user)"><mat-icon>mode_edit</mat-icon></button>
           <button mat-raised-button color="warn"(click)="DeleteUser(user._id)"><mat-icon>delete</mat-icon></button>
         </div>
       </mat-cell>
@@ -71,3 +71,11 @@
 </div>
 
 
+<!--<div class="phone-responsive" fxShow="false" fxFlex fxShow.lt-md="true" fxLayout="column" fxLayoutAlign="center">-->
+  <!--<mat-list>-->
+    <!--<mat-list-item *ngFor="let user of users">-->
+      <!--<mat-icon mat-list-icon>account_circle</mat-icon>-->
+      <!--<h4 mat-line>{{user.name}} {{user.last}}</h4>-->
+    <!--</mat-list-item>-->
+  <!--</mat-list>-->
+<!--</div>-->
