--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,119 +1,58 @@
-<div  class="profile-container" fxLayoutAlign="center center" fxFlex>
-  <mat-card class="profile-card">
+<div  class="profile-container" fxFlex>
+  <mat-card class="profile-content">
     <mat-card-header>
-      <!--<h1>{{user.role}}</h1>-->
+      <h1>{{user?.role}}</h1>
     </mat-card-header>
     <mat-card-content>
       <mat-tab-group>
         <mat-tab label="Profile">
-            <h1 mat-card-title>Hello, {{user.name}}</h1>
-            <mat-card-content>
-              <mat-list>
-                <mat-list-item><b>Username: </b> {{user.username}}</mat-list-item>
-                <mat-list-item>ID: {{user._id}}</mat-list-item>
-                <mat-list-item>Email: {{user.email}}</mat-list-item>
-                <mat-list-item>Password: {{user.password}}</mat-list-item>
-                <mat-list-item>Role: {{user.role}}</mat-list-item>
-              </mat-list>
-            </mat-card-content>
-            <mat-card-actions>
-              <button mat-raised-button>Edit</button>
-            </mat-card-actions>
-        </mat-tab>
-        <mat-tab label="Availability">
-          <div fxLayoutAlign="center center">
-          <mat-card>
-            <mat-card-content>
-              <div class="avail-container" fxLayoutGap="30px" fxLayout="column">
-                <div class="avail-switch" fxLayout="row">
-                  <div class="day" fxLayoutAlign="center center" fxFlex="50">
-                    Monday
-                  </div>
-                  <div class="avail" fxFlex="50">
-                    <mat-radio-group fxLayoutGap="25px">
-                      <mat-radio-button value="yes">Yes</mat-radio-button>
-                      <mat-radio-button value="no">No</mat-radio-button>
-                    </mat-radio-group>
-                  </div>
-                </div>
-                <div class="avail-switch" fxLayout="row">
-                  <div class="day" fxLayoutAlign="center center" fxFlex="50">
-                    Tuesday
-                  </div>
-                  <div class="avail" fxFlex="50">
-                    <mat-radio-group fxLayoutGap="25px">
-                      <mat-radio-button value="yes">Yes</mat-radio-button>
-                      <mat-radio-button value="no">No</mat-radio-button>
-                    </mat-radio-group>
-                  </div>
-                </div>
-                <div class="avail-switch" fxLayout="row">
-                  <div class="day" fxLayoutAlign="center center" fxFlex="50">
-                    Wednesday
-                  </div>
-                  <div class="avail" fxFlex="50">
-                    <mat-radio-group fxLayoutGap="25px">
-                      <mat-radio-button value="yes">Yes</mat-radio-button>
-                      <mat-radio-button value="no">No</mat-radio-button>
-                    </mat-radio-group>
-                  </div>
-                </div>
-                <div class="avail-switch" fxLayout="row">
-                  <div class="day"  fxLayoutAlign="center center" fxFlex="50">
-                    Thursday
-                  </div>
-                  <div class="avail" fxFlex="50">
-                    <mat-radio-group fxLayoutGap="25px">
-                      <mat-radio-button value="yes">Yes</mat-radio-button>
-                      <mat-radio-button value="no">No</mat-radio-button>
-                    </mat-radio-group>
-                  </div>
-                </div>
-                <div class="avail-switch" fxLayout="row">
-                  <div class="day" fxLayoutAlign="center center" fxFlex="50">
-                    Friday
-                  </div>
-                  <div class="avail" fxFlex="50">
-                    <mat-radio-group fxLayoutGap="25px">
-                      <mat-radio-button value="yes">Yes</mat-radio-button>
-                      <mat-radio-button value="no">No</mat-radio-button>
-                    </mat-radio-group>
-                  </div>
-                </div>
-                <div class="avail-switch" fxLayout="row">
-                  <div class="day" fxLayoutAlign="center center" fxFlex="50">
-                    Saturday
-                  </div>
-                  <div class="avail" fxFlex="50">
-                    <mat-radio-group fxLayoutGap="25px">
-                      <mat-radio-button value="yes">Yes</mat-radio-button>
-                      <mat-radio-button value="no">No</mat-radio-button>
-                    </mat-radio-group>
-                  </div>
-                </div>
-                <div class="avail-switch" fxLayout="row">
-                  <div class="day" fxLayoutAlign="center center" fxFlex="50">
-                    Sunday
-                  </div>
-                  <div class="avail" fxFlex="50">
-                    <mat-radio-group fxLayoutGap="25px">
-                      <mat-radio-button value="yes">Yes</mat-radio-button>
-                      <mat-radio-button value="no">No</mat-radio-button>
-                    </mat-radio-group>
-                  </div>
-                </div>
+          <div fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="space-around center">
+            <div fxFlex="50">
+              <mat-card class="profile-card">
+                <h1 mat-card-title>Hello, {{user?.name}}</h1>
+                <mat-card-content>
+                  <mat-list>
+                    <mat-list-item><b>Username: </b> {{user?.username}}</mat-list-item>
+                    <mat-list-item>ID: {{user?._id}}</mat-list-item>
+                    <mat-list-item>Email: {{user?.email}}</mat-list-item>
+                    <!--<mat-list-item>Password: {{user.password}}</mat-list-item>-->
+                    <mat-list-item>Role: {{user?.role}}</mat-list-item>
+                  </mat-list>
+                </mat-card-content>
+                <mat-card-actions>
+                  <button mat-raised-button>Edit</button>
+                </mat-card-actions>
+              </mat-card>
+            </div>
+            <div fxFlex="50" fxLayoutGap="10px" fxLayout="column" fxLayoutAlign="space-evenly center">
+              <div>
+              <mat-card class="profile-options">
+                <h1 mat-card-title>Notifications</h1>
+                <mat-card-content>
+                  <mat-list>
+                    <mat-list-item>
+                      E-mail Notifications
+                      <mat-slide-toggle>
+                        yes
+                      </mat-slide-toggle>
+                    </mat-list-item>
+                  </mat-list>
+                </mat-card-content>
+              </mat-card>
               </div>
-            </mat-card-content>
-            <mat-card-actions fxLayoutAlign="end">
-              <button mat-raised-button>Edit</button>
-              <button mat-raised-button>Submit</button>
-            </mat-card-actions>
-          </mat-card>
+              <div>
+              <mat-card class="profile-options">
+                <h1 mat-card-title>Preferences</h1>
+                <mat-card-content>
+                  <mat-list>
+                    <mat-list-item>Let employees see my email address<mat-slide-toggle>yes</mat-slide-toggle></mat-list-item>
+                    <mat-list-item>Let employees see my phone #<mat-slide-toggle>yes</mat-slide-toggle></mat-list-item>
+                  </mat-list>
+                </mat-card-content>
+              </mat-card>
+              </div>
+            </div>
           </div>
-        </mat-tab>
-        <mat-tab label="Calendar">
-          <!--<app-calendar></app-calendar>-->
-          <app-month></app-month>
         </mat-tab>
       </mat-tab-group>
     </mat-card-content>
